# Cursorius

./: .gitignore  README.md  pyproject-poetry.toml  pyproject.toml
src/cursorius/: __init__.py  __main__.py  utils.py
src/cursorius.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cursorius/smtp/: __init__.py  api.py
src/cursorius/telegram/: __init__.py  api.py
