[build-system]
requires = ["setuptools>=61.0", "aiohttp>3.8.5", "requests>=2.30.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursorius"
version = "0.1.0"
authors = [
  { name="Vadim Politov", email="vpolitov@vostok-electra.ru" },
]
description = "Package for delivery messages to telegram group/users and smtp clients."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.vostok-electra.ru/python_public_libs/cursorius"
